--- a/.env-example
+++ b/.env-example
@@ -5,3 +5,7 @@ ENV=production
 LOG_LEVEL=info
 OTEL_ENABLED=true
 OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318/v1/traces
+REDIS_URL=redis://localhost:6379
+RATE_LIMIT_WINDOW_MS=60000
+RATE_LIMIT_MAX=100
+TRUST_PROXY=true
