--- a/package.json
+++ b/package.json
@@ -38,10 +38,13 @@
     "@opentelemetry/semantic-conventions": "^1.18.1",
     "compression": "^1.7.4",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.4",
     "geojson-geometries-lookup": "^0.5.0",
     "helmet": "^7.1.0",
     "http-graceful-shutdown": "^3.1.13",
     "pino": "^8.16.2",
+    "rate-limit-redis": "^4.2.0",
+    "redis": "^4.6.10",
     "request-ip": "^3.3.0"
   }
 }
