--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@geo-maps/earth-lands-1m": "^0.6.0",
+    "@geo-maps/earth-lakes-1m": "^0.6.0",
+    "@geo-maps/earth-rivers-1m": "^0.6.0",
+    "@geo-maps/earth-seas-1m": "^0.6.0",
     "@opentelemetry/api": "^1.7.0",
     "@opentelemetry/auto-instrumentations-node": "^0.40.0",
     "@opentelemetry/exporter-trace-otlp-proto": "^0.45.1",
