--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "build": "tsc",
+    "build": "tsc && copyfiles --up 1 src/public/* dist",
     "start": "node dist/index.js",
     "test": "jest"
   },
@@ -21,6 +21,7 @@
     "@types/request-ip": "^0.0.41",
     "@types/supertest": "^2.0.16",
     "babel-jest": "^29.7.0",
+    "copyfiles": "^2.4.1",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3",
